@@ -172,7 +172,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1349 $"))
+    (let ((rev "$Revision: 1.1350 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1136))
 	   (format "1.4.%d" (+ rev 50)))))
@@ -1901,7 +1901,8 @@ Here are some predefined functions which can be used for those ways:
 (defcustom w3m-relationship-estimate-rules
   `((w3m-relationship-simple-estimate
      "\\`http://\\(?:www\\|blogsearch\\|groups\\|news\\|images\\)\
-\\.google\\.[^/]+/\\(?:\\(?:blog\\|code\\)?search\\|groups\\|news\\|images\\)"
+\\.google\\.[^/]+/\\(?:\\(?:blog\\|code\\)?search\\|groups\\|news\\|images\
+\\|cse\\?cx=\\|custom\\?q=\\)"
      ,(concat "<a[^>]+?href=" w3m-html-string-regexp
 	      "><img src=[^>]*nav_next\\.gif")
      ,(concat "<a[^>]+?href=" w3m-html-string-regexp
