@@ -1,3 +1,8 @@
+2008-04-03  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-relationship-estimate-rules): Support Google search
+	within EmacsWiki.  cf. [emacs-w3m:10067]
+
 2008-03-17  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-mouse-safe-view-this-url): Remove redundant confirmation
